--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "files.exclude": {
     "**/.venv": true
-  }
+  },
+  "python.formatting.provider": "yapf"
+  // "python.formatting.yapfArgs": ["--style=server/.style.yapf"]
 }
