--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "axios": "^0.25.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
-    "react-color": "^2.19.3",
+    "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
